--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,7 +31,7 @@ test:
 about:
   home: https://github.com/RDFLib/sparqlwrapper
   license: W3C
-  # 'LICENSE file is missing in source due to the project missing a MANIFEST.in to copy into the release.'
+  license_file: LICENSE.txt
   summary: 'SPARQL Endpoint interface to Python for use with rdflib'
   dev_url: https://github.com/RDFLib/sparqlwrapper
   doc_url: http://rdflib.github.io/sparqlwrapper
